--- a/main.html
+++ b/main.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+	<table>
+		<tr>
+			<div id="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png"
+		</tr>
+	</table>
+	<div class="image-container">
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
