--- a/main.html
+++ b/main.html
@@ -7,13 +7,31 @@
 </head>
 
 <body>
-	<table>
+	<table border="1">
 		<tr>
+			<td>
 			<div id="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png"
+		<p>Unit #5 -Floor plans
+       A. Kitchen
+	   B.Bathroom
+       C. Using "Slabs"
+	   D. Georgian Home
+       E. Sketching Assignment #5 </p>
 		</tr>
 	</table>
-	<div class="image-container">
-	</div>
+	<table>
+	<tr>
+		<thead>Objective</thead>
+			<td>Discuss factors that are important in the design of bedrooms.Plan the size 
+			size and location of closets for a typical residence. Plan a furniture arrangement for a room.
+			Implement important design considerations for bathrooms. Plan a bathroom that follows
+			solid design principles. Design a functional kitchen to meet a family's needs Select Kitchen appliances
+			appliances that are appropriate for a design. Plan an efficient clothes care center. Desrcibe appropriate dimensions
+			for garage space. Identify the room and areas that comprise the living area Apply design principles to planning a living
+			room Integrate the furniture in a living room plan Analyze a dining room using good design principles. Design a functional 
+				entry and foyer. </td>
+	</tr>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
