--- a/main.html
+++ b/main.html
@@ -3,25 +3,21 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
+	<link rel="stylesheet" href="stylesheet">
 	<table border="1">
 		<tr>
-			<td>
-			<div id="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png"
-		<p>Unit #5 -Floor plans
+			<td>Unit #5 -Floor plans
        A. Kitchen
 	   B.Bathroom
        C. Using "Slabs"
 	   D. Georgian Home
-       E. Sketching Assignment #5 </p>
+       E. Sketching Assignment #5
+			</td>
 		</tr>
 	</table>
-	<table>
+	<table border="1">
 	<tr>
-		<thead>Objective</thead>
+		<th>Objective</th>
 			<td>Discuss factors that are important in the design of bedrooms.Plan the size 
 			size and location of closets for a typical residence. Plan a furniture arrangement for a room.
 			Implement important design considerations for bathrooms. Plan a bathroom that follows
