--- a/main.html
+++ b/main.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="stylesheet">
 	<table border="1">
 		<tr>
+			<img src="">
+		<tr></tr>
 			<td>Unit #5 -Floor plans
        A. Kitchen
 	   B.Bathroom
@@ -13,11 +15,13 @@
 	   D. Georgian Home
        E. Sketching Assignment #5
 			</td>
-		</tr>
+			<tr>
+				<img src=""></img>
+		   </tr>
 	</table>
 	<table border="1">
 	<tr>
-		<th>Objective</th>
+		<th><b>Objective</b></th>
 			<td>Discuss factors that are important in the design of bedrooms.Plan the size 
 			size and location of closets for a typical residence. Plan a furniture arrangement for a room.
 			Implement important design considerations for bathrooms. Plan a bathroom that follows
