--- a/main.html
+++ b/main.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="stylesheet">
-	<table border="1">
-		<tr>
-			<img src="">
-		<tr></tr>
-			<td>Unit #5 -Floor plans
-       A. Kitchen
-	   B.Bathroom
-       C. Using "Slabs"
-	   D. Georgian Home
-       E. Sketching Assignment #5
-			</td>
+	<body>
+		<div class="center">
+			<div classss="imageContainer">
+				<img src="https://media.istockphoto.com/id/1063723682/photo/hand-sketching-a-designer-villa-with-pool.jpg?s=612x612&w=0&k=20&c=SlIacvwSEEsZ-2imWLDk6dC0glhaWEg-pOGFSK4YQuI="alt="">
+			</div>
+		<br>
+		<table>
 			<tr>
-				<img src=""></img>
-		   </tr>
+			<td>
+				<div class=
+
+			<td>Unit #5 -Floor plans
+      <br> A. Kitchen</br>
+	   <br>B.Bathroom</br>
+       <br>C.Using "Slabs"</br>
+	    <br>D. Georgian Home</br>
+       <br>E. Sketching Assignment #5</br>
+			</td>
+		</tr>
 	</table>
 	<table border="1">
 	<tr>
