--- a/main.html
+++ b/main.html
@@ -9,31 +9,62 @@
 			</div>
 		<br>
 		<table>
-			<tr>
-			<td>
-				<div class=
-
-			<td>Unit #5 -Floor plans
-      <br> A. Kitchen</br>
-	   <br>B.Bathroom</br>
-       <br>C.Using "Slabs"</br>
-	    <br>D. Georgian Home</br>
-       <br>E. Sketching Assignment #5</br>
+<tr>			
+<td>
+	<div class="center-small m1-10">
+		<img src="https://images.unsplash.com/photo-1488972685288-c3fd157d7c7a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8YXJjaGl0ZWN0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="">
+	</div>
+</td>
+	<td>
+		<div class="middle heading"
+			Unit #5 -Floor plans
+      <br> 
+	  A. Kitchen
+		<br>
+	  B.Bathroom
+	   <br>
+       C.Using "Slabs"
+	    <br>
+	   D. Georgian Home
+       <br>
+		E. Sketching Assignment #5
+		</div>
 			</td>
-		</tr>
-	</table>
-	<table border="1">
-	<tr>
-		<th><b>Objective</b></th>
-			<td>Discuss factors that are important in the design of bedrooms.Plan the size 
+	<td>
+		<div class="center-small m1-10">
+			<img src="https://images.unsplash.com/photo-1506749841726-3df2e72b9564?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGFyY2hpdGVjdHVyZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60%22"alt="">
+			</div>
+	</td>
+</tr>
+		<tr>
+			<td width="200">
+				<div class="class-small ml-10">
+					<img src="https://images.unsplash.com/photo-1506749841726
+	-3df2e72b9564?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGFyY2hpdGVjdHVyZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60%22" alt="">
+				<span>
+					<strong>HousePlans.com</strong>	
+					The largest source for quality affordable ready-made house plans. A great plans 
+					to surf for space planning ideas
+					</span>
+					<br>
+					<a href="">learn more</a>
+				</div>
+			</td>
+			<div class="middle-heading" plr-10"><strong>Objective</strong>
+			</div>
+		<p>
+			Discuss factors that are important in the design of bedrooms.Plan the size 
 			size and location of closets for a typical residence. Plan a furniture arrangement for a room.
 			Implement important design considerations for bathrooms. Plan a bathroom that follows
 			solid design principles. Design a functional kitchen to meet a family's needs Select Kitchen appliances
 			appliances that are appropriate for a design. Plan an efficient clothes care center. Desrcibe appropriate dimensions
 			for garage space. Identify the room and areas that comprise the living area Apply design principles to planning a living
 			room Integrate the furniture in a living room plan Analyze a dining room using good design principles. Design a functional 
-				entry and foyer. </td>
-	</tr>
+				entry and foyer.
+		</p>
+		</div>
+		<br>
+Free 
 	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
