--- a/main.html
+++ b/main.html
@@ -64,7 +64,9 @@
 		</p>
 		</div>
 		<br>
-Free 
+FreeGreen.com offers both sponsored and non-sponsored floor plans. Their goal is to provide consumers with free solutionsto their green architectural 
+		needs.
+		<
 	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
