--- a/main.html
+++ b/main.html
@@ -64,10 +64,14 @@
 		</p>
 		</div>
 		<br>
-FreeGreen.com offers both sponsored and non-sponsored floor plans. Their goal is to provide consumers with free solutionsto their green architectural 
+FreeGreen.com offers both sponsored and non-sponsored floor plans. Their goal is to provide consumers with free solutions to their green architectural 
 		needs.
-		<
+		<a href="">learn more</a>
+	</div>
+	</td>
+	</tr>
 	</table>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
