--- a/main.html
+++ b/main.html
@@ -64,12 +64,14 @@
 		</p>
 		</div>
 		<br>
+		<span>
 		<strong>Green Floor</strong>
 		<img src="https://images.unsplash.com/photo-1506749841726-3df2e72b9564?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGFyY2hpdGVjdHVyZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60%22"alt="">
 		
 FreeGreen.com offers both sponsored and non-sponsored floor plans. Their goal is to provide consumers with free solutions to their green architectural 
 		needs.
 		<a href="">learn more</a>
+			</span>
 	</div>
 	</td>
 	</tr>
