--- a/main.html
+++ b/main.html
@@ -50,6 +50,7 @@
 					<a href="">learn more</a>
 				</div>
 			</td>
+			<td width="600">
 			<div class="middle-heading" plr-10"><strong>Objective</strong>
 			</div>
 		<p>
