--- a/main.html
+++ b/main.html
@@ -51,8 +51,7 @@
 				</div>
 			</td>
 			<td width="600">
-			<div class="middle-heading" plr-10"><strong>Objective</strong>
-			</div>
+			<div class="middle-heading plr-10"><strong>Objective</strong>
 		<p>
 			Discuss factors that are important in the design of bedrooms.Plan the size 
 			size and location of closets for a typical residence. Plan a furniture arrangement for a room.
@@ -68,12 +67,14 @@
 		<span>
 		<strong>Green Floor</strong>
 		<img src="https://images.unsplash.com/photo-1506749841726-3df2e72b9564?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGFyY2hpdGVjdHVyZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60%22"alt="">
-		
+		<span class="heading">
+			<br>
 FreeGreen.com offers both sponsored and non-sponsored floor plans. Their goal is to provide consumers with free solutions to their green architectural 
 		needs.
-		<a href="">learn more</a>
-			</span>
-	</div>
+		</span>
+			<br>
+		<a href=""> learn more</a>
+		</div>
 	</td>
 	</tr>
 	</table>
