--- a/main.html
+++ b/main.html
@@ -63,6 +63,8 @@
 				entry and foyer.
 		</p>
 		</div>
+				<td width="200">
+					<div class="center-small m1-10">
 		<br>
 		<span>
 		<strong>Green Floor</strong>
