--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="stylesheet">
 	<body>
 		<div class="center">
-			<div classss="imageContainer img">
+			<div classss="imageContainer">
 				<img src="https://media.istockphoto.com/id/1063723682/photo/hand-sketching-a-designer-villa-with-pool.jpg?s=612x612&w=0&k=20&c=SlIacvwSEEsZ-2imWLDk6dC0glhaWEg-pOGFSK4YQuI="alt="">
 			</div>
 		<br>
